[metadata]
name = BFEE2
version = 2.1.2
author = Haohao Fu, Haochuan Chen, Wensheng Cai and Chris Chipot
author_email = wscai@nankai.edu.cn
maintainer = Haohao Fu
maintainer_email = fhh2626@mail.nankai.edu.cn
url = https://github.com/fhh2626/BFEE2
license = GPLv3
license_files =
    LICENSE
description = Binding Free Energy Estimator 2
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
scripts = 
    bin/BFEE2Gui.py
include_package_data = true
install_requires =
    setuptools
    pyside2
    appdirs
    MDAnalysis
    matplotlib
    numpy


[options.package_data]
* = *.template, *.tcl, *.awk, *.pdf, *.txt
