[metadata]
name = bfee2
author = Haohao Fu, Haochuan Chen, Hengwei Bian, Wensheng Cai, Chris Chipot
author_email = fhh2626@nankai.edu.cn
maintainer = Haohao Fu
maintainer_email = fhh2626@nankai.edu.cn
url = https://github.com/fhh2626/BFEE2
license = GPLv3
license_files =
    LICENSE
description = Binding Free Energy Estimator 2
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
scripts = 
    bin/BFEE2Gui.py
install_requires =
    setuptools
    pyside6
    appdirs
    MDAnalysis
    matplotlib
    numpy
	scipy
    parmed


[options.package_data]
* = *.template, *.tcl, *.awk, *.pdf, *.txt
